# openarc-studio

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.bat  build.sh  components.json  package-lock.json  package.json  svelte.config.js  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: audio.ts  chat.svelte.ts  client.svelte.ts  curated-models.svelte.ts  kokoro.ts  model-types.ts  qwen3_tts_speakers.ts  state.svelte.ts  voice.svelte.ts  vram-estimator.ts
src/lib/actions/: external.js  markdownLinks.js
src/lib/components/layout/: DeviceSelectionModal.svelte  LinkConfirmDialog.svelte  ModelConfigModal.svelte  ModelDownloaderModal.svelte  Onboarding.svelte  SettingsModal.svelte  SideNav.svelte  StatusBar.svelte  TitleBar.svelte  TopBar.svelte  VramEstimator.svelte  VramOffloadBar.svelte
src/lib/components/layout/settings/: SettingsAppearancePage.svelte  SettingsExperimentalPage.svelte  SettingsGeneralPage.svelte  SettingsHardwarePage.svelte  SettingsLogsPage.svelte  SettingsRuntimePage.svelte
src/lib/components/ui/command/: command-input.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
src/routes/benchmark/: +page.svelte
src/routes/models/: +page.svelte
src/routes/server/: +page.svelte
src/routes/voice/: +page.svelte  AdvancedAudioConfig.svelte  AudioPlayer.svelte  RecorderButton.svelte  RefAudioButton.svelte  SpeechToText.svelte  TtsGeneration.svelte  VoiceCloning.svelte  VoiceDesign.svelte  VoiceLibrarySidebar.svelte
static/: curated-manifest.json
(+1 files in other folders)
